src/default.css
/* ... */
body.branch .brlist > table > tbody > tr > td:nth-child(1) {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
body.branch .submenu > a.timeline-link {
  display: none;
}
body.branch .submenu > a.timeline-link.selected {
  display: inline;
}

/* Candidate fonts for various forms of monospaced text. Collected here
 * to avoid repeating this long list of fonts. */
code, kbd, pre, samp, tt, var,
    div.markdown ol.footnotes > li.fn-joined > sup.fn-joined,
    table.numbered-lines > tbody > tr,
    tr.diffskip > td.chunkctrl,
    #fossil-status-bar,
    .monospace {
  font-family: "MesloLGSDZ Nerd Font Mono",     /* 2025 hotness */
               "Source Code Pro",               /* 2012 hotness */
               "Menlo", "Monaco", "SF Mono",    /* Safari reverted to Courier in 2022 */
               monospace;                       /* let OS/browser default take over */
}

div.markdown > ol.footnotes {
  font-size: 90%;
}
div.markdown > ol.footnotes > li {
  margin-bottom: 0.5em;
}
div.markdown ol.footnotes > li.fn-joined > sup.fn-joined {
  color: gray;
}
div.markdown ol.footnotes > li.fn-joined > sup.fn-joined::after {
  content: "(joined from multiple locations) ";
}
div.markdown ol.footnotes > li.fn-misreference {
  margin-top:    0.75em;
  margin-bottom: 0.75em;
}
div.markdown ol.footnotes > li.fn-toodeep > i,
div.markdown ol.footnotes > li.fn-misreference,
div.markdown ol.footnotes > li.fn-unreferenced {
  color: gray;
}
div.markdown ol.footnotes > li.fn-misreference > span {
  color: red;
}
div.markdown ol.footnotes > li.fn-misreference > span::after {
  content: " (use of undefined label).";
}
div.markdown ol.footnotes > li.fn-unreferenced {
  padding-left: 0.5em;
}
div.markdown ol.footnotes > li.fn-unreferenced > code {
  color: red;
}
div.markdown ol.footnotes > li.fn-unreferenced > i::after {
  content: " was defined but is not referenced";
}
div.markdown ol.footnotes > li.fn-toodeep > i::after {
  content: " depth of nesting of inline footnotes exceeded the limit";
}
div.markdown ol.footnotes > li.fn-toodeep > pre,
div.markdown ol.footnotes > li.fn-unreferenced > pre {
  color: gray;
  font-size: 85%;
  padding-left: 0.5em;
  margin-top:  0.25em;
  border-left: 2px solid red;
}
div.markdown ol.footnotes > li.fn-toodeep > pre {
  margin-left: 0.5em;
}
div.markdown > ol.footnotes > li > .fn-backrefs {
  margin-right: 0.5em;
  font-weight: bold;
}
div.markdown > ol.footnotes > li > .fn-backrefs > a,
div.markdown sup.noteref > a {
  padding-left:  2px;
  padding-right: 2px;
}
div.markdown sup.noteref.misref,
div.markdown sup.noteref.misref > a {
  color: red;
  font-size: 90%;
}
div.markdown sup.noteref > a:target,
div.markdown span.notescope:target > sup.noteref > a,
div.markdown span.notescope:hover  > sup.noteref > a,
div.markdown > ol.footnotes > li > .fn-backrefs > a:target {
  background: gold;
}
div.markdown span.notescope:hover,
div.markdown span.notescope:target {
  border-bottom: 2px solid gold;
}

/* Cause <dd> elements to be aligned complete to the
** right of their <dt> on help pages. */
dl.helpOptions {
  display: grid;
  grid-template-columns: max-content 1fr;
  column-gap: 1rem;
}
dl.helpOptions > dt {
  grid-column: 1;
}
dl.helpOptions > dd {
  grid-column: 2;
  margin: 0;
}
div.helpPage blockquote {
  margin-left: 0.2em;
}

/* .attach* = styles for file attachments */
.attach-widget {
  margin-bottom: 1em;
  display: flex;
  flex-direction: column;
  gap: 0.75em;
}
.attach-widget .attach-row {
  display: flex;
  flex-direction: column;
  gap: 0.5em;
  padding: 0.75em;
  border: 1px dashed #ccc;
  border-radius: 0.25em;
  background-color: #fafafa;
}
.attach-widget .error {
  padding: 0.5em;
  background-color: #d32f2f;
  color: #fff;
}
body.fossil-dark-style .attach-widget .attach-row {
  background-color: initial;
}
.attach-widget .attach-dropzone {
  padding: 1em;
  text-align: center;
  background: #ffffff;
  border: 1px solid #ddd;
  cursor: pointer;
  border-radius: 0.25em;
  transition: background-color 0.15s ease-in-out;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
}
body.fossil-dark-style .attach-widget .attach-dropzone{
  background: initial;
}
.attach-widget .attach-dropzone.populated {
  background-color: #f1f8e9;
  border-color: #8bc34a;
  border-style: solid;
  text-align: left;
}
body.fossil-dark-style .attach-widget .attach-dropzone.populated{
  background-color: initial;
}
.attach-widget .attach-dropzone.dragover {
  background-color: #e1f5fe;
  border-color: #03a9f4;
}
body.fossil-dark-style .attach-widget .attach-dropzone.dragover{
  border-color: #03a9f4;
}
body.fossil-dark-style  .attach-widget .attach-dropzone.dragover{
  background-color: #e1f5fe;
  border-color: #03a9f4;
}
.attach-widget .thumbnail {
  max-width: 10em;
  max-height: 10em;
  margin: 0 1em;
}
.attach-widget .attach-row-info{
  font-family: monospace;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
}
.attach-widget .attach-filename {}
.attach-widget .attach-size {/*size and mimetype*/}
.attach-widget .attach-desc {
  max-width: initial;
  width: 100%;
  box-sizing: border-box;
  min-height: 4em;
  padding: 0.5em;
  font-family: inherit;
  resize: vertical;
}
.attach-widget .attach-row-remove {
  align-self: center;
  padding: 0.25em 0.75em;
  margin-left: 1em;
  background-color: #d32f2f;
  color: #fff;
  border: none;
  border-radius: 0.25em;
  cursor: pointer;
}
.attach-widget .attach-row-remove:hover {
  background-color: #b71c1c;
}
.attach-widget .attach-controls {
  display: flex;
  flex-direction: row;
  gap: 1em;
}
.attach-widget .attach-controls .attach-add-button {
  padding: 0.5em 1em;
  cursor: pointer;
  flex-grow: 2;
}

/* Objects in the "desktoponly" class are invisible on mobile */
@media screen and (max-width: 600px) {
  .desktoponly {
    display: none;
  }
}
/* ... */

